--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>My First Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Hello, I’m Asma!</h1>
   <p>This is my first website hosted on GitHub Pages.</p>
 </body>
 </html>
+
